[gd_scene load_steps=12 format=3 uid="uid://cqdxr0x5p473b"]

[ext_resource type="Script" path="res://Items/work_light.gd" id="1_3ojxu"]
[ext_resource type="PackedScene" uid="uid://dvu5rhbq64dqb" path="res://Items/WorkLight.tscn" id="2_2wtrb"]
[ext_resource type="Script" path="res://Resources/res_item.gd" id="2_burmu"]
[ext_resource type="Script" path="res://Items/plug_detect.gd" id="4_1lxto"]
[ext_resource type="PackedScene" uid="uid://bvnhgiueqxt8r" path="res://Gadgets/ConeLightLarge.tscn" id="4_sc7ew"]
[ext_resource type="PackedScene" uid="uid://buuplwt7twho" path="res://Assets/Worklight.glb" id="6_vm068"]

[sub_resource type="Resource" id="Resource_lphfi"]
script = ExtResource("2_burmu")
scene = ExtResource("2_2wtrb")
title = "Work Light"
power = 0.0
knocked_over = false
broken = false
heavy = false
plug = false
battery = false
fuel = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_41lkj"]
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_jxper"]
material = SubResource("StandardMaterial3D_41lkj")
size = Vector3(1, 0.4, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_kxpk0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_83ln2"]
radius = 0.756222

[node name="WorkLightTall" type="RigidBody3D" groups=["Defence", "Item", "Socket"]]
collision_layer = 2
lock_rotation = true
script = ExtResource("1_3ojxu")
item_resource = SubResource("Resource_lphfi")

[node name="lightMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.596574, -0.209053, -0.034385, -0.000460287, 0.138279, -0.321507, 0.26112, 0.477862, 0.0779917, 1.05127, 3.22892, -0.182806)
mesh = SubResource("BoxMesh_jxper")

[node name="lightMesh2" type="MeshInstance3D" parent="lightMesh"]
transform = Transform3D(-0.830482, -0.442238, 0.082769, 0.709109, -0.661902, 0.268175, 0.259444, -0.664998, -0.913532, -2.69053, 1.37423, -0.130762)
mesh = SubResource("BoxMesh_jxper")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_kxpk0")

[node name="ConeLight" parent="." instance=ExtResource("4_sc7ew")]
transform = Transform3D(1, 0, 0, 0, 0.868519, 0.495656, 0, -0.495656, 0.868519, 0, 3.10745, -0.478551)

[node name="PlugDetect" type="Area3D" parent="." groups=["Socket"]]
collision_layer = 8
collision_mask = 8
script = ExtResource("4_1lxto")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlugDetect"]
shape = SubResource("SphereShape3D_83ln2")

[node name="PlugPos" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0187387, -0.381702, 0.44253)

[node name="Worklight" parent="." instance=ExtResource("6_vm068")]
transform = Transform3D(-0.199913, 0, 1.7477e-08, 0, 0.199913, 0, -1.7477e-08, 0, -0.199913, 0.658748, 3.67728, -0.0104432)

[connection signal="body_entered" from="PlugDetect" to="." method="_on_plug_detect_body_entered"]
